<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="132dp"
    android:layout_margin="12dp">

    <ImageView
        android:id="@+id/poster_image"
        android:layout_width="76dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="15dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/info_layout"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/info_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/reservation_button"
        app:layout_constraintLeft_toRightOf="@+id/poster_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/screening_date_text"
            android:layout_width="wrap_content"
            android:layout_height="14dp"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/running_time_text"
            android:layout_width="wrap_content"
            android:layout_height="14dp"
            android:layout_marginBottom="6dp"
            android:gravity="center_vertical"
            android:textSize="14dp" />

    </LinearLayout>

    <Button
        android:id="@+id/reservation_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/now_reservation"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>