...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/minus_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/minus"
                android:textSize="25sp" />

...
                android:gravity="center"
                tools:text = "0"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/plus_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plus"
                android:textSize="25sp" />
        </LinearLayout>
...
