...
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    style="@style/SeatB"
                    android:text="A1" />

                <TextView
                    style="@style/SeatB"
                    android:text="A2" />

                <TextView
...
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/seating_movie_title"
            app:layout_constraintTop_toBottomOf="@+id/seating_movie_title" />

        <TextView
            android:id="@+id/seating_confirm"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@drawable/reservation_button_enabled"
            android:gravity="center"
            android:text="확인"
            android:textColor="@color/white"
...
