...
                    android:text="@string/plus"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/detail_reservation_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:padding="10sp"
                android:text="@string/reserve_complete"
                android:textSize="25sp"
...
