<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="seats">
        <item>A1</item>
        <item>A2</item>
        <item>A3</item>
        <item>A4</item>
        <item>B1</item>
        <item>B2</item>
        <item>B3</item>
        <item>B4</item>
        <item>C1</item>
        <item>C2</item>
        <item>C3</item>
        <item>C4</item>
        <item>D1</item>
        <item>D2</item>
        <item>D3</item>
        <item>D4</item>
        <item>E1</item>
        <item>E2</item>
        <item>E3</item>
        <item>E4</item>
    </string-array>
</resources>
